# Kurse

./: +  .gitattributes  .gitignore  README.md
C++/me/: me.c
CS50/: README.md
CS50/CS50/movies/: 12.sql  (+1 more)
CS50/credit/: credit.c
CS50/dna/: dna.py
CS50/fiftyville/: fiftyville.db
CS50/filter-less/: helpers.c
CS50/filter-more/: helpers.c
CS50/finance/: app.py  finance.db
CS50/hello/: hello.c
CS50/homepage/: index.html
CS50/inheritance/: inheritance.c
CS50/mario-more/: mario.c
CS50/movies/: 10.sql  11.sql  13.sql  2.sql  4.sql  6.sql  8.sql  9.sql
CS50/plurality/: plurality.c
CS50/population/: population.c
CS50/readability/: readability.c
CS50/recover/: recover.c
CS50/runoff/: runoff.c
CS50/sentimental-credit/: credit.py
CS50/sentimental-hello/: hello.py
CS50/sentimental-mario-more/: mario.py
CS50/sentimental-readability/: readability.py
CS50/smiley/: helpers.c
CS50/songs/: answers.txt
CS50/sort/: answers.txt
CS50/speller/: dictionary.c
CS50/trivia/: styles.css
CS50/volume/: volume.c
CS50/wordle/: wordle.c
CS50/world-cup/: answers.txt  tournament.py
FreeCodeCamp/Assembly/ARM_YT/: ARM_YT.md  CMakeLists.txt  Template_Kursnotizen.md  proc.asm  tasks.json
FreeCodeCamp/FCC_ExerciseTracker/: README.md  index.js  package-lock.json  package.json
FreeCodeCamp/FCC_UrlShortener/: index.js  package-lock.json  package.json
FrontendMasters/: Job_Vorbereitung.md
Web-Development/: BrowserEngineering.md  chatgpt.txt
iwas/: loader.js  package-lock.json  package.json
sicpjs/: exercises_01.ts  index.html  sicp.txt  sicpjs.md
(+455 files in other folders)
